fix: text-align: center

--- a/src/components/LoadingMessage/LoadingMessage.module.scss
+++ b/src/components/LoadingMessage/LoadingMessage.module.scss
@@ -4,7 +4,7 @@
 }
 
 .heading {
-  text-align: left;
+  text-align: center;
   font-size: 1.13rem;
   letter-spacing: 0px;
   font-weight: 500;
